# togyzkumalakRL

./: RULES.md  kaggle_train.ipynb  pyproject.toml
.github/workflows/: ci.yml
alphazero_togyz/configs/: default.yaml
alphazero_togyz/src/: agent.py
alphazero_togyz/src/arena/: eval.py
alphazero_togyz/src/encoding/: encoding.py
alphazero_togyz/src/game/: togyzkumalak.py
alphazero_togyz/src/mcts/: search.py
alphazero_togyz/src/nn/: model.py
alphazero_togyz/src/selfplay/: worker.py
alphazero_togyz/src/trainer/: loop.py
notebooks/: kaggle_train.ipynb
src/: agent.py
src/arena/: eval.py
src/game/: __init__.py  encoding.py  togyzkumalak.py
src/mcts/: search.py
src/nn/: model.py
src/selfplay/: worker.py
src/trainer/: loop.py
tests/: test_agent.py  test_arena.py  test_encoding.py  test_mcts.py  test_model.py  test_rules.py  test_selfplay.py  test_training.py
